welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: illegal start of simple pattern
			for(n2 <- 1 to table(n1 - 1) - 1;{
                                                         ^golomb:14: error: '<-' expected but ';' found.
			n1 = n1 + table(n1 - 1) - 1; 
                                                   ^golomb:15: error: illegal start of simple pattern
		}
                ^